# VertiRF

./: .gitignore  AGENTS.md  LICENSE  README.md  architecture.md  benchmark_corr_legacy_equiv_large.json  benchmark_corr_legacy_equiv_medium.json  benchmark_decon_legacy_equiv_large.json  benchmark_decon_legacy_equiv_medium.json  benchmark_stack_legacy_equiv_large.json  benchmark_stack_legacy_equiv_medium.json  pyproject.toml  tasks.md
.github/workflows/: ci.yml
assets/: corr_mode_research_compare_20260303.json  corr_mode_research_post_20260303.json  corr_mode_research_pre_20260303.json  corr_prompt22_real_consistency_20260303.json  decon_mode_research_20260303.json  decon_prompt22_real_consistency_20260303.json  native_backend_status.json  real_case_three_methods_wiggle.json  real_case_wiggle.json
docs/: plan.md
examples/: mcp_client_example.py
scripts/: benchmark.py  benchmark_corr_legacy_equiv.py  benchmark_decon_legacy_equiv.py  benchmark_stack_legacy_equiv.py  build_engineering_dataset.py  build_native_corr_backend.py  check_native_backend.py  generate_overview_figure.py  generate_real_case_three_methods_wiggle.py  generate_real_case_wiggle.py  method_parallel_benchmark.py  run_engineering_repro.py
src/vertirf/: __init__.py  cli.py
src/vertirf/agent/: __init__.py  server.py
src/vertirf/catalog/: __init__.py
src/vertirf/core/: __init__.py  decon.py  methods.py
src/vertirf/filters/: __init__.py  zero_phase.py
src/vertirf/native/: __init__.py  backend.py  corr_kernel.cpp  (+1 more)
tests/: test_agent.py  test_corr_stack.py  test_decon.py  test_filters.py
(+3 files in other folders)
