[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vertirf"
version = "0.1.0"
description = "High-performance time-iteration deconvolution toolkit for vertical receiver functions"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "VertiRF Contributors" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
vertirf = "vertirf.cli:main"
vertirf-agent = "vertirf.agent.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
